PROJECT(week2)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_EXECUTABLE(week2 week2.cpp) 

FIND_PACKAGE(OpenGL)

FIND_PACKAGE(GLUT) 

IF(OPENGL_FOUND)
	
	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARIES})

ELSE(OPENGL_FOUND)
	
	MESSAGE(FATAL_ERROR "OpenGL not found")

ENDIF(OPENGL_FOUND) 

IF(GLUT_FOUND)
	
	INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
	
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLUT_LIBRARIES})

ELSE(GLUT_FOUND)

ENDIF(GLUT_FOUND) 
